--- a/edit/photos.html
+++ b/edit/photos.html
@@ -2249,7 +2249,7 @@
                                   <div class="_c56c9g">
                                     <a
                                       href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
-                                      class="explore-click"
+                                      class="text-link"
                                       ><span
                                         class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                         ><span class="dir dir-ltr"
