--- a/insights.html
+++ b/insights.html
@@ -1491,7 +1491,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=expertise"
-                                    class="explore-click"
+                                    class="text-link"
                                     ><span class="text-highlight dir dir-ltr"
                                       >Expertise</span
                                     >
@@ -1522,7 +1522,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=access"
-                                    class="explore-click"
+                                    class="text-link"
                                     ><span class="text-highlight dir dir-ltr"
                                       >Insider access</span
                                     >
@@ -1553,7 +1553,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=connection"
-                                    class="explore-click"
+                                    class="text-link"
                                     ><span class="text-highlight dir dir-ltr"
                                       >Connection</span
                                     >
