--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -550,7 +550,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="explore-click"
+                                                    class="text-link"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -713,18 +713,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more</a
                                                 >
                                               </div>
@@ -1325,7 +1325,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="explore-click"
+                                                    class="text-link"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -1488,18 +1488,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more</a
                                                 >
                                               </div>
