--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -307,7 +307,7 @@
                                                 Number.
                                                 <a
                                                   href="/help/article/436/what-is-vat-and-how-does-it-apply-to-me"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more about VAT.</a
                                                 >
                                               </div>
@@ -376,7 +376,7 @@
                                                 <a
                                                   target="_blank"
                                                   href="/help/article/438/where-do-i-find-my-vat-invoice"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more.</a
                                                 >
                                               </div>
@@ -738,7 +738,7 @@
                                                 Number.
                                                 <a
                                                   href="/help/article/436/what-is-vat-and-how-does-it-apply-to-me"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more about VAT.</a
                                                 >
                                               </div>
@@ -807,7 +807,7 @@
                                                 <a
                                                   target="_blank"
                                                   href="/help/article/438/where-do-i-find-my-vat-invoice"
-                                                  class="explore-click"
+                                                  class="text-link"
                                                   >Learn more.</a
                                                 >
                                               </div>
