--- a/profile.html
+++ b/profile.html
@@ -663,7 +663,7 @@
                                             ><span class="_nx67f0"
                                               ><a
                                                 href="/users/edit-photo"
-                                                class="explore-click"
+                                                class="text-link"
                                                 >Update photo</a
                                               ></span
                                             >
@@ -1522,7 +1522,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   <div class="_pdgm0p">
                                     <a
                                       href="/users/edit-photo"
-                                      class="explore-click"
+                                      class="text-link"
                                       >Update photo</a
                                     >
                                   </div>
@@ -1757,7 +1757,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       ><span class="_nx67f0"
                                         ><a
                                           href="/users/edit-photo"
-                                          class="explore-click"
+                                          class="text-link"
                                           >Update photo</a
                                         ></span
                                       >
