--- a/signup_login.html
+++ b/signup_login.html
@@ -1256,7 +1256,7 @@
                                           <a
                                             target="_blank"
                                             href="/terms/privacy_policy?source=signup"
-                                            class="explore-click"
+                                            class="text-link"
                                             >Privacy Policy</a
                                           ></span
                                         >
@@ -4510,7 +4510,7 @@
                                         <a
                                           target="_blank"
                                           href="/terms/privacy_policy?source=signup"
-                                          class="explore-click"
+                                          class="text-link"
                                           >Privacy Policy</a
                                         ></span
                                       >
@@ -5562,7 +5562,7 @@
                                             style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x:58.1026; --mouse-y:30.8632;"></span></span><span
                                           class="_tcp689">Log in </span></button></div><a
                                       data-testid="forgot-password-link" href="/forgot_password.html"
-                                      class="_1sikdxcl">Forgot password?</a>
+                                      class="text-link">Forgot password?</a>
                                   </form>
                                 </div>
                               </div>
