--- a/trips.html
+++ b/trips.html
@@ -715,7 +715,7 @@
                                       ><a
                                         aria-label="Visit the Help&nbsp;Center"
                                         href="/help?audience=guest"
-                                        class="explore-click"
+                                        class="text-link"
                                         >Visit the Help&nbsp;Center</a
                                       ></span
                                     >
