--- a/welcome_back.html
+++ b/welcome_back.html
@@ -408,13 +408,13 @@
                                     <a
                                       data-testid="forgot-password-link"
                                       href="/forgot_password"
-                                      class="explore-click"
+                                      class="text-link"
                                       >Forgot password?</a
                                     >
 
                                     <p>
                                       Not you?
-                                      <a class="explore-click"
+                                      <a class="text-link"
                                         >Use another account</a
                                       >
                                     </p>
