--- a/inbox.html
+++ b/inbox.html
@@ -1728,7 +1728,7 @@
                                   <a
                                     target="_blank"
                                     href="/experiences/3745068"
-                                    class="explore-click"
+                                    class="text-link"
                                     >View experience</a
                                   >
                                 </div>
